# infra

./: .gitignore  Makefile  PLAN.md  README.md  TODO.txt  __main__.py  chat.py  pyproject.toml  root.Makefile
chat/: README.md  chat.py  kelvin
chat/tools/: __init__.py  shell.py
config/: chat.yaml  old.chat.yaml
prompts/: README.md
prompts/system/: blogger.md  brainstorming.md  code-reviewer.md  curator.md  documentation.md  infra-engineer.md  lab-assistant.md  planning.md  programmer.md  researcher.md  story-writer.md
prompts/templates/: experiment-plan.md  incident-retro.md  promote-to-project.md  research-kickoff.md  tool-evaluation.md
prompts/workflows/: infra-audit.md  lab-curate.md  morning-briefing.md  new-experiment.md  research-to-experiment.md
sandbox/: Dockerfile  Makefile  exec_sandbox.sh  run_sandbox.sh
tools/: data-tools.json  default.json  dev-tools.json  sys-tools.json
tools/chat/: chat.py  cli.py  commands.py  files.py  help.py  old.chat.py
